# DE31-final-team5

./: README.md
Wellness_flutter/: .gitignore
Wellness_flutter/frontend/: .gitignore  flutter_native_splash.yaml  pubspec.yaml
Wellness_flutter/frontend/android/: build.gradle  settings.gradle
Wellness_flutter/frontend/lib/: main.dart
Wellness_flutter/frontend/test/: widget_test.dart
Wellness_flutter/frontend/web/: index.html
wellness_backend_final/: Dockerfile  pyproject.toml
wellness_backend_final/.github/workflows/: cicd.yaml
wellness_backend_final/app/: background.py  main.py
wellness_backend_final/app/api/v1/: auth.py  history.py  login.py  mealrecords.py  model.py  recommend.py  register.py
wellness_backend_final/app/core/: config.py  exception_handlers.py  logging.py  middlewares.py
wellness_backend_final/app/db/: crud.py  models.py  session.py
wellness_backend_final/app/schemas/: auth.py  food.py  history.py  log.py  meal_type.py  recommend.py  total_today.py  user.py
wellness_backend_final/app/services/: auth_service.py  recommend_service.py
wellness_backend_final/app/utils/: format.py  image_processing.py  s3.py
wellness_infra/: README.md
wellness_infra/.github/workflows/: cicd.yaml
wellness_infra/environments/dev/: backend.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
wellness_infra/environments/prod/: backend.tf  terraform.tfvars
wellness_infra/modules/dynamodb/: main.tf  (+2 more)
wellness_model/: .gitignore  Dockerfile  pyproject.toml
wellness_model/.github/workflows/: cicd.yaml
wellness_model/app/: main.py  model.py
(+49 files in other folders)
